<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_of_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="0sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/cat_face" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="left"
                android:paddingBottom="40dp"
                android:paddingLeft="10dp"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="left"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:text="@string/question"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/player_EditText"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:focusable="true"
                android:hint="@string/player"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textCapWords" />

            <TextView
                style="@style/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/Question1_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_button_1a"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_a" />

                <RadioButton
                    android:id="@+id/radio_button_1b"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_b" />

                <RadioButton
                    android:id="@+id/radio_button_1c"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_c" />

                <RadioButton
                    android:id="@+id/radio_button_1d"
                    style="@style/textEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_d" />

            </RadioGroup>

            <TextView
                style="@style/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/Question2_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_button_2a"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_a" />

                <RadioButton
                    android:id="@+id/radio_button_2b"
                    style="@style/textEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_b" />
            </RadioGroup>

            <TextView
                style="@style/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <RadioGroup
                android:id="@+id/Question3_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_button_3a"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3_a" />

                <RadioButton
                    android:id="@+id/radio_button_3b"
                    style="@style/textEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3_b" />
            </RadioGroup>

            <TextView
                style="@style/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <RadioGroup
                android:id="@+id/Question4_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_button_4a"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_a" />

                <RadioButton
                    android:id="@+id/radio_button_4b"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_b" />

                <RadioButton
                    android:id="@+id/radio_button_4c"
                    style="@style/textEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_c" />
            </RadioGroup>

            <TextView
                style="@style/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <RadioGroup
                android:id="@+id/Question5_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_button_5a"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_5_a" />

                <RadioButton
                    android:id="@+id/radio_button_5b"
                    style="@style/textEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_5_b" />
            </RadioGroup>

            <TextView
                style="@style/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6" />

            <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/question6"
                style="@style/textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_6_a"
                android:imeOptions="actionDone"
                android:inputType="textCapWords" />

            <TextView
                style="@style/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_7" />

            <RadioGroup
                android:id="@+id/Question7_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_button_7a"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_a" />

                <RadioButton
                    android:id="@+id/radio_button_7b"
                    style="@style/textEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_b" />
            </RadioGroup>

            <TextView
                style="@style/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_8" />

            <CheckBox
                android:id="@+id/checkbox_8a"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_8_a" />

            <CheckBox
                android:id="@+id/checkbox_8b"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_8_b" />

            <CheckBox
                android:id="@+id/checkbox_8c"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_8_c" />

            <CheckBox
                android:id="@+id/checkbox_8d"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_8_d" />

            <CheckBox
                android:id="@+id/checkbox_8e"
                style="@style/textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_8_e" />

            <TextView
                android:id="@+id/result_TextView"
                style="@style/finalWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result" />

            <TextView
                android:id="@+id/correctAnswers_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:theme="@style/text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:onClick="submitResults"
                android:text="@string/finish"
                android:theme="@style/Button" />

            <Button
                android:layout_width="65dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:onClick="resetQuiz"
                android:text="@string/reset"
                android:textSize="10sp"
                android:theme="@style/Button" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>